--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         tools:targetApi="31">
         <activity
             android:name=".GameActivity"
+            android:configChanges="keyboardHidden|orientation"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
